# gwp05

./: .gitignore  AGENTS.md  README.md  Review.md  Revise.md  pyproject.toml  train_gwp_v0_heat_food_fold_shirt_mot_video_pt_g4.sh  train_gwp_v0_heat_food_mot_joint_from_videopt_restart_g4.sh  train_gwp_v0_heat_food_mot_joint_from_videopt_restart_g8.sh  train_gwp_v0_single_task_mot_joint_from_videopt_g4.sh  train_pick_place_g1_sonic_mot.sh  train_pick_place_g1_sonic_mot_action_from_videopt_10ep_g8.sh  train_pick_place_g1_sonic_mot_action_from_videopt_5ep_debug.sh  train_pick_place_g1_sonic_mot_action_from_videopt_5ep_g8.sh  train_pick_place_g1_sonic_mot_video_pt_debug.sh  train_pick_place_g1_sonic_mot_video_pt_g8.sh  train_robocasa_all_tshape_mot.sh  train_robocasa_all_tshape_mot_back4_joint.sh  train_robocasa_all_tshape_mot_front4_two_stage.sh  train_robocasa_all_tshape_mot_joint_from_videopt_randomcrop.sh  train_robocasa_all_tshape_mot_video_pt_epoch1_randomcrop.sh  train_robocasa_all_tshape_mot_video_pt_epoch1_randomcrop_320x448.sh  train_robocasa_atomic_seen_tshape_mot_back4_joint_epoch3.sh
configs/: gwp_v0_heat_food_fold_shirt_mot.py  gwp_v0_heat_food_fold_shirt_mot_video_pt.py  gwp_v0_heat_food_mot_joint_from_videopt_5ep_restart.py  gwp_v0_single_task_mot_joint_from_videopt_5ep.py  robocasa_all_tshape_mot.py  robocasa_all_tshape_mot_back4_joint.py  robocasa_all_tshape_mot_back4_joint_epoch3.py  robocasa_all_tshape_mot_back4_joint_epoch3_tshape256.py  robocasa_all_tshape_mot_back4_joint_epoch3_tshape256_resume.py  robocasa_all_tshape_mot_back4_joint_resume.py  (+11 more)
(+70 files in other folders)
