[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwp-mot"
version = "0.1.0"
description = "Giga World Policy — Flow-matching based world-action model for robot manipulation"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "av>=16.0.1",
    "bitsandbytes",
    "came-pytorch",
    "decord>=0.6.0",
    "deepspeed>=0.18.0",
    "diffusers>=0.35.2",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "h5py>=3.15.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "numpydantic",
    "numpy>=1.26.3",
    "opencv-python>=4.9.0.80",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.0",
    "pynvml",
    "safetensors>=0.6.2",
    "transformers>=4.57.1",
    "tyro",
    "wandb>=0.22.2",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["world_action_model*"]
